# nucleo-f446re

./: Cargo.toml  Embed.toml  LICENSE-APACHE  LICENSE-MIT  README.md  memory.x  rust-toolchain.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
examples/: README.md  blinky.rs  blinky_fade.rs  blinky_fade_direct.rs  button_blink.rs  button_blink_direct.rs  channels-3u-1d.rs  rprintln.rs  serial_loopback.rs  serial_terminal.rs
src/: button.rs  led.rs  lib.rs  serial.rs
