[package]
name = "nucleo-f446re"
version = "0.1.0"
edition = "2021"
authors = ["Steve Heindel <stevenheindel@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Board Support Package crate for the Nucleo-F446RE board"
repository = "https://github.com/schteve/nucleo-f446re"
readme = "README.md"
keywords = ["arm", "bsp", "cortex-m", "nucleo", "stm32"]
categories = ["embedded", "hardware-support", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.5", features = ["critical-section-single-core"] }
embedded-hal = "0.2.7"
switch-hal = "0.4.0"
stm32f4xx-hal = { version = "0.13.2", features = ["stm32f446"]}
unwrap-infallible = "0.1.5"

[dev-dependencies]
cortex-m-rt = "0.7.1"
panic-probe = { version = "0.3.0", features = ["print-rtt"] }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
